--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Echo|SITE</title> <!--站点名称-->
-		<link rel="shortcut icon" href="https://yy.liveout.cn/photo/photo2.jpg"/> 、<!--站点头像-->
-		<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-		<link rel="stylesheet" href="index.css" />
-		
-	</head>
-	<body>
-		<!--背景连线-->
-		<script type="text/javascript" src="canvas-nest.min.js"></script>
-		<canvas height="926" width="1920" style="position: fixed; top: 0px; left: 0px; z-index: -1; opacity: 0.5;" id="c_n1"></canvas>
 
-	    <div id="container">
-	    	<div class="wrap">
-	    		<img src="https://yy.liveout.cn/photo/photo2.jpg">
-	    		<h1>Echo</h1>
-	    		<p>A Sophomore Student Of Internet & Things @ XZHMU</p>
-	    		<p><a href="https://www.liveout.cn/about/"><b>More Aout Me</b></a></p>
-	    		<p><i class="fa fa-map-marker"></i>&nbsp;XuZhou·China</p>
-	    		<p class="nav">
-	    			<a href="https://www.liveout.cn/"><b>Blog</a>
-	    			<a href="https://www.liveout.cn/learn/">Article</a>
-	    			<a href="https://www.liveout.cn/feel/"> Talk</a>
-	    			<a href="https://www.liveout.cn/message/">Contact</a>
-                    <a href="https://www.liveout.cn/friends/">Friends</a>
-	    		</p>
-	    	</div>
-	    </div>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<title>Echo|SITE</title> <!--站点名称-->
+	<link rel="shortcut icon" href="https://yy.liveout.cn/photo/photo2.jpg" /> 、<!--站点头像-->
+	<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		name="viewport">
+	<link rel="stylesheet" href="index.css" />
+
+</head>
+
+<body>
+	<!--背景连线-->
+	<script type="text/javascript" src="canvas-nest.min.js"></script>
+	<canvas id="myCanvas"></canvas>
+
+	<div id="container">
+		<div class="wrap">
+			<img src="https://yy.liveout.cn/photo/photo2.jpg">
+			<h1>ECHO's BLOG
+			</h1>
+			<p class="fontb">A Sophomore Student Of Internet & Things @ XZHMU</p>
+			<nav>
+				<ul>
+					<li><a href="https://www.liveout.cn/" target="_blank">Blog</a></li>
+					<li><a href="https://www.liveout.cn/learn/" target="_blank">Article</a></li>
+					<li><a href="https://www.liveout.cn/message/" target="_blank">Contact</a></li>
+					<li><a href="https://www.liveout.cn/about/" target="_blank">About</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</body>
+
 </html>
