--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</style>
 	<link rel="stylesheet" id="style-css" href="css/style.css" type="text/css" media="all">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<link rel="icon" type="image/ico" href="favicon.ico">
+	<link rel="icon" type="image/ico" href="https://yy.liveout.cn/photo/photo2.jpg">
 </head>
 
 <body class="home blog">
