--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<img src="https://yy.liveout.cn/photo/photo2.jpg" alt="">
 					</div>
 					<h1>Echo</h1>
-					<p>Life is a coding,I will debug it.</p>
+					<p>Argon主题相关配置文件寄了，等考完试再看看</p>
 					<div class="zuobiao"><i class="ico_map"></i> 徐州·中国</div>
 					<div >
 						<nav>
