--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<canvas id="myCanvas"></canvas>
 
 	<div class="wrapper">
-		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/219_1.png');">
+		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/628.png');">
 		</section>
 		<section class="right">
 			<div class="index_box">
