--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="format-detection" content="email=no">
 	<meta name="format-detection" content="address=no">
 	<meta name="format-detection" content="date=no">
-	<title>Echo-Site</title>
+	<title>Echo's Secret</title>
 	<meta name="keywords" content="Echo">
 	<meta name="description" content="index_page">
 	<style>
@@ -24,27 +24,26 @@
 		}
 	</style>
 	<link rel="stylesheet" id="style-css" href="css/style.css" type="text/css" media="all">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<link rel="icon" type="image/ico" href="https://yy.liveout.cn/photo/photo2.jpg">
 </head>
 
 <body class="home blog">
 
-	<script type="text/javascript" src="canvas-nest.min.js"></script>
+	<script type="text/javascript" src="js/canvas-nest.min.js"></script>
 	<canvas id="myCanvas"></canvas>
 
 	<div class="wrapper">
-		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/628.png');">
+		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/630.png');">
 		</section>
 		<section class="right">
 			<div class="index_box">
 				<div class="index_txt">
 					<div class="wrap">
-						<img src="https://yy.liveout.cn/photo/photo2.jpg" alt="">
+						<img src="https://yy.liveout.cn/photo/photo2.jpg" alt="1">
 					</div>
 					<h1>Echo</h1>
-					<p>Life is a coding,I will debug it.</p>
-					<div class="zuobiao"><i class="ico_map"></i> 徐州·中国</div>
+					<p class="saying">Life is a coding,I will debug it.</p>
+					<div class="zuobiao"><i class="ico_map"></i> 无限·收敛</div>
 					<div >
 						<nav>
 							<ul>
