--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			width: 50%
 		}
 	</style>
+	
 	<link rel="stylesheet" id="style-css" href="css/style.css" type="text/css" media="all">
 	<link rel="icon" type="image/ico" href="https://yy.liveout.cn/photo/photo2.jpg">
 </head>
@@ -33,7 +34,7 @@
 	<canvas id="myCanvas"></canvas>
 
 	<div class="wrapper">
-		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/630.png');">
+		<section class="left" style="background-image: url('https://yy.liveout.cn/background/2023/727.png');">
 		</section>
 		<section class="right">
 			<div class="index_box">
@@ -65,7 +66,7 @@
 			</footer>
 		</section><!--right-->
 	</div><!--wrapper-->
-	<script type="text/javascript" src="js/js.js"></script>
+	<script src="js/canvas-nest.min.js"></script>
 </body>
 
 </html>
