--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</div>
 					<h1>Echo</h1>
 					<p class="saying">Life is a coding,I will debug it.</p>
-					<div class="zuobiao"><i class="ico_map"></i> 无限·收敛</div>
+					<div class="zuobiao"><i class="ico_map"></i> JS·LYG</div>
 					<div >
 						<nav>
 							<ul>
